[tool.poetry]
name = "offvsix"
version = "0.1.2"
description = "Visual Studio Code Extension Downloader for offline usage"
authors = ["Lucian BLETAN <neuraluc@gmail.com>"]
repository = "https://github.com/exaluc/offvsix"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
offvsix = 'offvsix.main:cli'
